feat: Enable real-time progress logging in Colab notebook
- Replaced subprocess.run(capture_output=True) with streaming helper
- stream_command() uses Popen to print stdout line-by-line
- Allows visualizing the new progress indicators (heartbeat, phase logs) live
- Preserves checkpointing and Drive sync logic

--- a/notebooks/EdgePatch_Colab.ipynb
+++ b/notebooks/EdgePatch_Colab.ipynb
@@ -14,6 +14,7 @@
                 "- Computes per-chunk causal importance via ANSWER→CHUNK attention-edge masking\n",
                 "- **CRITICAL**: Verifies that `edge_layers` and `edge_heads` actually change outputs\n",
                 "- **PERSISTENT**: Saves all outputs to Google Drive with smart checkpointing\n",
+                "- **ROBUST**: Real-time progress monitoring and crash recovery\n",
                 "\n",
                 "## Quick Start\n",
                 "1. Run Cell 1 (Mount Drive & Setup)\n",
@@ -35,6 +36,7 @@
                 "import os\n",
                 "import json\n",
                 "import shutil\n",
+                "import subprocess\n",
                 "from pathlib import Path\n",
                 "from datetime import datetime\n",
                 "\n",
@@ -60,8 +62,34 @@
                 "print(f\"Checkpoints: {DRIVE_CHECKPOINTS}\")\n",
                 "\n",
                 "# ============================================================\n",
-                "# CHECKPOINT UTILITIES\n",
+                "# UTILITIES\n",
                 "# ============================================================\n",
+                "def stream_command(cmd_list):\n",
+                "    \"\"\"Run command and stream output to Colab cell in real-time.\"\"\"\n",
+                "    print(f\"Running: {' '.join(cmd_list)}\")\n",
+                "    process = subprocess.Popen(\n",
+                "        cmd_list,\n",
+                "        stdout=subprocess.PIPE,\n",
+                "        stderr=subprocess.STDOUT,\n",
+                "        text=True,\n",
+                "        bufsize=1,\n",
+                "        universal_newlines=True\n",
+                "    )\n",
+                "    \n",
+                "    output_lines = []\n",
+                "    for line in iter(process.stdout.readline, ''):\n",
+                "        print(line, end='')\n",
+                "        output_lines.append(line)\n",
+                "        \n",
+                "    process.stdout.close()\n",
+                "    return_code = process.wait()\n",
+                "    \n",
+                "    if return_code != 0:\n",
+                "        print(f\"\\n⚠️ Command failed with return code {return_code}\")\n",
+                "    \n",
+                "    return return_code, \"\".join(output_lines)\n",
+                "\n",
+                "\n",
                 "class CheckpointManager:\n",
                 "    \"\"\"Manages checkpoints for crash recovery.\"\"\"\n",
                 "    \n",
@@ -152,7 +180,6 @@
                 "# Cell 2: Smoke Test with Drive Persistence\n",
                 "# Quick validation with 1 example, saved to Drive\n",
                 "\n",
-                "import subprocess\n",
                 "import json\n",
                 "from pathlib import Path\n",
                 "\n",
@@ -170,16 +197,10 @@
                 "else:\n",
                 "    print(\"Running smoke test...\")\n",
                 "    \n",
-                "    # Run smoke test\n",
-                "    result = subprocess.run(\n",
-                "        [\"python\", \"scripts/run_edgepatch.py\", \"smoke\", \"--output-dir\", str(LOCAL_OUTPUT)],\n",
-                "        capture_output=True,\n",
-                "        text=True\n",
+                "    # Run smoke test with real-time logging\n",
+                "    return_code, output = stream_command(\n",
+                "        [\"python\", \"scripts/run_edgepatch.py\", \"smoke\", \"--output-dir\", str(LOCAL_OUTPUT)]\n",
                 "    )\n",
-                "    \n",
-                "    print(result.stdout)\n",
-                "    if result.stderr:\n",
-                "        print(\"STDERR:\", result.stderr[-1000:])\n",
                 "    \n",
                 "    # Check if artifacts exist\n",
                 "    run_dir = get_latest_run(LOCAL_OUTPUT)\n",
@@ -217,7 +238,6 @@
                 "# Verify that different edge_layers produce different results\n",
                 "# This MUST pass - if it fails, masking is broken!\n",
                 "\n",
-                "import subprocess\n",
                 "import json\n",
                 "from pathlib import Path\n",
                 "import numpy as np\n",
@@ -236,14 +256,13 @@
                 "        \"--edge-layers\"\n",
                 "    ] + [str(l) for l in layers]\n",
                 "    \n",
-                "    result = subprocess.run(cmd, capture_output=True, text=True)\n",
+                "    return_code, output = stream_command(cmd)\n",
                 "    \n",
                 "    # Find the run directory and load results\n",
                 "    run_dir = get_latest_run(local_output)\n",
                 "    \n",
                 "    if not run_dir:\n",
                 "        print(f\"ERROR: No run dir for {output_name}\")\n",
-                "        print(result.stderr[-500:] if result.stderr else \"No stderr\")\n",
                 "        return None, None\n",
                 "    \n",
                 "    results_path = run_dir / \"all_results.json\"\n",
@@ -329,7 +348,6 @@
                 "# Verify that different edge_heads produce different results\n",
                 "# This MUST pass - if it fails, head masking is broken!\n",
                 "\n",
-                "import subprocess\n",
                 "import json\n",
                 "from pathlib import Path\n",
                 "import numpy as np\n",
@@ -349,7 +367,7 @@
                 "        \"--edge-heads\"\n",
                 "    ] + [str(h) for h in heads]\n",
                 "    \n",
-                "    result = subprocess.run(cmd, capture_output=True, text=True)\n",
+                "    return_code, output = stream_command(cmd)\n",
                 "    \n",
                 "    # Find the run directory and load results\n",
                 "    run_dir = get_latest_run(local_output)\n",
@@ -441,7 +459,6 @@
                 "# Run with 3 examples and full metrics, with crash recovery\n",
                 "# ONLY RUN THIS IF TOGGLE TESTS PASSED!\n",
                 "\n",
-                "import subprocess\n",
                 "import json\n",
                 "from pathlib import Path\n",
                 "\n",
@@ -485,15 +502,10 @@
                 "    print(\"Running confirm with max_examples=3...\")\n",
                 "    print(\"This may take a few minutes...\\n\")\n",
                 "    \n",
-                "    result = subprocess.run(\n",
+                "    # Run with streaming output\n",
+                "    return_code, output = stream_command(\n",
                 "        [\"python\", \"scripts/run_edgepatch.py\", \"confirm\", \"--output-dir\", str(LOCAL_OUTPUT)],\n",
-                "        capture_output=True,\n",
-                "        text=True\n",
                 "    )\n",
-                "    \n",
-                "    print(result.stdout)\n",
-                "    if result.stderr:\n",
-                "        print(\"STDERR:\", result.stderr[-2000:])\n",
                 "    \n",
                 "    # Check artifacts\n",
                 "    run_dir = get_latest_run(LOCAL_OUTPUT)\n",
