feat: Pin example ID and scoring span in notebook for scientific comparability
- Added PINNED_EXAMPLE variable (problem_1591) to Cell 1
- Updated Smoke, Layer Toggle, Head Toggle cells to use --example-ids and --score-span extended
- Confirm cell uses extended span but allows multiple examples
- All validation cells now use consistent controls

--- a/notebooks/EdgePatch_Colab.ipynb
+++ b/notebooks/EdgePatch_Colab.ipynb
@@ -21,7 +21,12 @@
                 "2. Run Cell 2 (Smoke Test)\n",
                 "3. Run Cell 3 (Layer Toggle Test) - **MUST PASS**\n",
                 "4. Run Cell 4 (Head Toggle Test) - **MUST PASS**\n",
-                "5. Run Cell 5 (Confirm Run) - Only if toggles pass"
+                "5. Run Cell 5 (Confirm Run) - Only if toggles pass\n",
+                "\n",
+                "## Scientific Controls\n",
+                "All validation cells use:\n",
+                "- **Pinned Example ID**: `problem_1591` for comparability\n",
+                "- **Extended Scoring Span**: Avoids saturated targets"
             ]
         },
         {
@@ -52,6 +57,9 @@
                 "DRIVE_CHECKPOINTS = DRIVE_BASE / 'checkpoints'\n",
                 "DRIVE_LOGS = DRIVE_BASE / 'logs'\n",
                 "\n",
+                "# PINNED EXAMPLE for all validation cells (scientific control)\n",
+                "PINNED_EXAMPLE = \"problem_1591\"\n",
+                "\n",
                 "# Create directories\n",
                 "DRIVE_RUNS.mkdir(parents=True, exist_ok=True)\n",
                 "DRIVE_CHECKPOINTS.mkdir(parents=True, exist_ok=True)\n",
@@ -60,6 +68,7 @@
                 "print(f\"Drive base: {DRIVE_BASE}\")\n",
                 "print(f\"Runs will be saved to: {DRIVE_RUNS}\")\n",
                 "print(f\"Checkpoints: {DRIVE_CHECKPOINTS}\")\n",
+                "print(f\"Pinned example: {PINNED_EXAMPLE}\")\n",
                 "\n",
                 "# ============================================================\n",
                 "# UTILITIES\n",
@@ -168,6 +177,7 @@
                 "print(\"\\n\" + \"=\"*60)\n",
                 "print(\"✓ SETUP COMPLETE\")\n",
                 "print(f\"  Outputs will be saved to: {DRIVE_BASE}\")\n",
+                "print(f\"  Pinned example: {PINNED_EXAMPLE}\")\n",
                 "print(\"=\"*60)"
             ]
         },
@@ -179,6 +189,7 @@
             "source": [
                 "# Cell 2: Smoke Test with Drive Persistence\n",
                 "# Quick validation with 1 example, saved to Drive\n",
+                "# PINNED to problem_1591 with extended scoring span\n",
                 "\n",
                 "import json\n",
                 "from pathlib import Path\n",
@@ -198,8 +209,12 @@
                 "    print(\"Running smoke test...\")\n",
                 "    \n",
                 "    # Run smoke test with real-time logging\n",
+                "    # PINNED: Same example and scoring span across all validation cells\n",
                 "    return_code, output = stream_command(\n",
-                "        [\"python\", \"scripts/run_edgepatch.py\", \"smoke\", \"--output-dir\", str(LOCAL_OUTPUT)]\n",
+                "        [\"python\", \"scripts/run_edgepatch.py\", \"smoke\",\n",
+                "         \"--output-dir\", str(LOCAL_OUTPUT),\n",
+                "         \"--example-ids\", PINNED_EXAMPLE,\n",
+                "         \"--score-span\", \"extended\"]\n",
                 "    )\n",
                 "    \n",
                 "    # Check if artifacts exist\n",
@@ -237,6 +252,7 @@
                 "# Cell 3: Layer Toggle Test (CRITICAL) with Drive Persistence\n",
                 "# Verify that different edge_layers produce different results\n",
                 "# This MUST pass - if it fails, masking is broken!\n",
+                "# PINNED to problem_1591 with extended scoring span\n",
                 "\n",
                 "import json\n",
                 "from pathlib import Path\n",
@@ -250,9 +266,12 @@
                 "    \"\"\"Run EdgePatch with specific layers and return scores.\"\"\"\n",
                 "    local_output = Path(f\"runs/{output_name}\")\n",
                 "    \n",
+                "    # PINNED: Same example and scoring span for scientific comparability\n",
                 "    cmd = [\n",
                 "        \"python\", \"scripts/run_edgepatch.py\", \"smoke\",\n",
                 "        \"--output-dir\", str(local_output),\n",
+                "        \"--example-ids\", PINNED_EXAMPLE,\n",
+                "        \"--score-span\", \"extended\",\n",
                 "        \"--edge-layers\"\n",
                 "    ] + [str(l) for l in layers]\n",
                 "    \n",
@@ -347,6 +366,7 @@
                 "# Cell 4: Head Toggle Test (CRITICAL) with Drive Persistence\n",
                 "# Verify that different edge_heads produce different results\n",
                 "# This MUST pass - if it fails, head masking is broken!\n",
+                "# PINNED to problem_1591 with extended scoring span\n",
                 "\n",
                 "import json\n",
                 "from pathlib import Path\n",
@@ -360,9 +380,12 @@
                 "    \"\"\"Run EdgePatch with specific heads and return scores.\"\"\"\n",
                 "    local_output = Path(f\"runs/{output_name}\")\n",
                 "    \n",
+                "    # PINNED: Same example and scoring span for scientific comparability\n",
                 "    cmd = [\n",
                 "        \"python\", \"scripts/run_edgepatch.py\", \"smoke\",\n",
                 "        \"--output-dir\", str(local_output),\n",
+                "        \"--example-ids\", PINNED_EXAMPLE,\n",
+                "        \"--score-span\", \"extended\",\n",
                 "        \"--edge-layers\", \"0\", \"1\", \"2\", \"3\",  # Fix layers for comparison\n",
                 "        \"--edge-heads\"\n",
                 "    ] + [str(h) for h in heads]\n",
@@ -502,9 +525,11 @@
                 "    print(\"Running confirm with max_examples=3...\")\n",
                 "    print(\"This may take a few minutes...\\n\")\n",
                 "    \n",
-                "    # Run with streaming output\n",
+                "    # Run with streaming output (confirm mode uses multiple examples)\n",
                 "    return_code, output = stream_command(\n",
-                "        [\"python\", \"scripts/run_edgepatch.py\", \"confirm\", \"--output-dir\", str(LOCAL_OUTPUT)],\n",
+                "        [\"python\", \"scripts/run_edgepatch.py\", \"confirm\",\n",
+                "         \"--output-dir\", str(LOCAL_OUTPUT),\n",
+                "         \"--score-span\", \"extended\"],\n",
                 "    )\n",
                 "    \n",
                 "    # Check artifacts\n",
