feat: Add incremental Drive sync for crash protection

--- a/notebooks/EdgePatch_Colab.ipynb
+++ b/notebooks/EdgePatch_Colab.ipynb
@@ -480,7 +480,7 @@
             "source": [
                 "# Cell 5: Confirm Run with 15 Examples (Excluding Prior Run)\n",
                 "# Excludes IDs from prior confirm_5ex run to get NEW examples\n",
-                "# BYPASS: Skips toggle prerequisite checks\n",
+                "# INCREMENTAL SYNC: Saves to Drive after EVERY example for crash protection\n",
                 "\n",
                 "import json\n",
                 "import glob\n",
@@ -492,6 +492,7 @@
                 "\n",
                 "RUN_NAME = \"confirm_15ex\"\n",
                 "LOCAL_OUTPUT = Path(f\"runs/{RUN_NAME}\")\n",
+                "DRIVE_SYNC = DRIVE_RUNS / RUN_NAME  # Incremental sync target\n",
                 "ckpt = CheckpointManager(DRIVE_CHECKPOINTS, RUN_NAME)\n",
                 "prev_state = ckpt.load()\n",
                 "\n",
@@ -518,9 +519,10 @@
                 "    print(f\"Added {len(prev_state['processed_ids'])} IDs from checkpoint\")\n",
                 "\n",
                 "print(f\"Total IDs to exclude: {len(prior_ids)}\")\n",
+                "print(f\"Incremental sync target: {DRIVE_SYNC}\")\n",
                 "\n",
                 "# ============================================================\n",
-                "# RUN CONFIRM WITH EXCLUSION\n",
+                "# RUN CONFIRM WITH EXCLUSION + INCREMENTAL SYNC\n",
                 "# ============================================================\n",
                 "if prev_state and prev_state.get('status') == 'completed':\n",
                 "    print(f\"\u2713 Confirm run already completed at {prev_state.get('timestamp')}\")\n",
@@ -542,14 +544,16 @@
                 "        print(\"=\"*60)\n",
                 "else:\n",
                 "    print(\"Running confirm with max_examples=15 (excluding prior IDs)...\")\n",
+                "    print(\"Results sync to Drive after EVERY example for crash protection!\")\n",
                 "    print(\"This may take 20-30 minutes...\\n\")\n",
                 "    \n",
-                "    # Build command with exclude list\n",
+                "    # Build command with exclude list AND Drive sync\n",
                 "    cmd = [\n",
                 "        \"python\", \"scripts/run_edgepatch.py\", \"confirm\",\n",
                 "        \"--output-dir\", str(LOCAL_OUTPUT),\n",
                 "        \"--max-examples\", \"15\",\n",
-                "        \"--score-span\", \"extended\"\n",
+                "        \"--score-span\", \"extended\",\n",
+                "        \"--drive-sync-dir\", str(DRIVE_SYNC),  # INCREMENTAL SYNC!\n",
                 "    ]\n",
                 "    \n",
                 "    # Add exclude IDs if we have any\n",
@@ -566,7 +570,7 @@
                 "        results_path = run_dir / \"all_results.json\"\n",
                 "        \n",
                 "        if metrics_path.exists():\n",
-                "            # Sync to Drive\n",
+                "            # Final sync to Drive (full artifacts)\n",
                 "            drive_path = sync_to_drive(run_dir, DRIVE_RUNS / RUN_NAME)\n",
                 "            \n",
                 "            with open(metrics_path) as f:\n",
@@ -605,10 +609,12 @@
                 "        else:\n",
                 "            print(\"\\n\" + \"=\"*60)\n",
                 "            print(\"\u2717 CONFIRM FAIL - No eval_metrics.json\")\n",
+                "            print(\"  Check incremental results at: \" + str(DRIVE_SYNC / \"all_results_incremental.json\"))\n",
                 "            print(\"=\"*60)\n",
                 "    else:\n",
                 "        print(\"\\n\" + \"=\"*60)\n",
                 "        print(\"\u2717 CONFIRM FAIL - No run directory\")\n",
+                "        print(\"  Check incremental results at: \" + str(DRIVE_SYNC / \"all_results_incremental.json\"))\n",
                 "        print(\"=\"*60)"
             ]
         },
