docs: Update Colab notebook for rollout-light v2
- Updated intro markdown with rollout-light method description
- Cell 5 now uses --method rollout_light by default
- Added configurable parameters: MAX_DECISION_POINTS, ROLLOUT_K, ROLLOUT_H
- Displays method_details from results (decision points, rollout stats)
- RUN_NAME changed to confirm_rollout_light

--- a/notebooks/EdgePatch_Colab.ipynb
+++ b/notebooks/EdgePatch_Colab.ipynb
@@ -8,20 +8,25 @@
                 "\n",
                 "This notebook runs the Edge-Patch experiments on Colab A100.\n",
                 "\n",
+                "**Scoring Methods:**\n",
+                "- **`legacy`**: KL divergence at answer span (fast, used for smoke/toggle tests)\n",
+                "- **`rollout_light`**: Entropy-based decision points + paired rollouts (default for confirm/main)\n",
+                "\n",
                 "**Key Features:**\n",
                 "- Loads the `uzaymacar/math-rollouts` dataset\n",
                 "- Uses dataset's chunk boundaries (no re-splitting)\n",
-                "- Computes per-chunk causal importance via ANSWER\u2192CHUNK attention-edge masking\n",
-                "- **CRITICAL**: Verifies that `edge_layers` and `edge_heads` actually change outputs\n",
+                "- Computes per-chunk causal importance via attention-edge masking\n",
+                "- **v2**: Decision point discovery via entropy/margin curves\n",
+                "- **v2**: Attention-based chunk screening (FREE - no extra forward passes)\n",
+                "- **v2**: Paired rollouts with event-based answer metrics\n",
                 "- **PERSISTENT**: Saves all outputs to Google Drive with smart checkpointing\n",
-                "- **ROBUST**: Real-time progress monitoring and crash recovery\n",
                 "\n",
                 "## Quick Start\n",
                 "1. Run Cell 1 (Mount Drive & Setup)\n",
-                "2. Run Cell 2 (Smoke Test)\n",
+                "2. Run Cell 2 (Smoke Test) - Uses legacy method\n",
                 "3. Run Cell 3 (Layer Toggle Test) - **MUST PASS**\n",
                 "4. Run Cell 4 (Head Toggle Test) - **MUST PASS**\n",
-                "5. Run Cell 5 (Confirm Run) - Only if toggles pass\n",
+                "5. Run Cell 5 (Confirm Run with rollout_light) - Only if toggles pass\n",
                 "\n",
                 "## Scientific Controls\n",
                 "All validation cells use:\n",
@@ -478,9 +483,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Cell 5: Confirm Run with 15 Examples (Excluding Prior Run)\n",
-                "# Excludes IDs from prior confirm_5ex run to get NEW examples\n",
-                "# INCREMENTAL SYNC: Saves to Drive after EVERY example for crash protection\n",
+                "# Cell 5: Confirm Run with Rollout-Light v2\n",
+                "# Uses entropy-based decision points + paired rollouts\n",
+                "# Excludes IDs from prior run for incremental processing\n",
                 "\n",
                 "import json\n",
                 "import glob\n",
@@ -490,28 +495,34 @@
                 "LAYER_TOGGLE_PASSED = True\n",
                 "HEAD_TOGGLE_PASSED = True\n",
                 "\n",
-                "RUN_NAME = \"confirm_15ex\"\n",
+                "RUN_NAME = \"confirm_rollout_light\"\n",
                 "LOCAL_OUTPUT = Path(f\"runs/{RUN_NAME}\")\n",
                 "DRIVE_SYNC = DRIVE_RUNS / RUN_NAME  # Incremental sync target\n",
                 "ckpt = CheckpointManager(DRIVE_CHECKPOINTS, RUN_NAME)\n",
                 "prev_state = ckpt.load()\n",
                 "\n",
                 "# ============================================================\n",
-                "# LOAD PRIOR PROCESSED IDs FROM DRIVE\n",
+                "# LOAD PRIOR PROCESSED IDs FROM DRIVE (if any)\n",
                 "# ============================================================\n",
-                "PRIOR_RUN_PATH = Path(\"/content/drive/MyDrive/SEAM/runs/confirm_5ex/edgepatch_20260115_161124\")\n",
                 "prior_ids = set()\n",
                 "\n",
-                "# Load from prior all_results.json\n",
-                "prior_results = PRIOR_RUN_PATH / \"all_results.json\"\n",
-                "if prior_results.exists():\n",
-                "    with open(prior_results) as f:\n",
-                "        for ex in json.load(f):\n",
-                "            prior_ids.add(ex[\"example_id\"])\n",
-                "    print(f\"Loaded {len(prior_ids)} IDs to exclude from prior run\")\n",
-                "    print(f\"  Excluding: {sorted(prior_ids)}\")\n",
-                "else:\n",
-                "    print(f\"Warning: Prior results not found at {prior_results}\")\n",
+                "# Check for prior runs to exclude\n",
+                "prior_run_paths = [\n",
+                "    Path(\"/content/drive/MyDrive/SEAM/runs/confirm_5ex\"),\n",
+                "    Path(\"/content/drive/MyDrive/SEAM/runs/confirm_15ex\"),\n",
+                "]\n",
+                "\n",
+                "for prior_path in prior_run_paths:\n",
+                "    if prior_path.exists():\n",
+                "        # Find all_results.json in subdirs\n",
+                "        for results_file in prior_path.glob(\"*/all_results.json\"):\n",
+                "            try:\n",
+                "                with open(results_file) as f:\n",
+                "                    for ex in json.load(f):\n",
+                "                        prior_ids.add(ex[\"example_id\"])\n",
+                "                print(f\"Loaded IDs from {results_file}\")\n",
+                "            except Exception as e:\n",
+                "                print(f\"Warning: Could not load {results_file}: {e}\")\n",
                 "\n",
                 "# Also check current checkpoint for growing exclude list\n",
                 "if prev_state and 'processed_ids' in prev_state:\n",
@@ -522,10 +533,24 @@
                 "print(f\"Incremental sync target: {DRIVE_SYNC}\")\n",
                 "\n",
                 "# ============================================================\n",
-                "# RUN CONFIRM WITH EXCLUSION + INCREMENTAL SYNC\n",
+                "# ROLLOUT-LIGHT CONFIGURATION\n",
+                "# ============================================================\n",
+                "MAX_EXAMPLES = 5  # Number of NEW examples to process\n",
+                "MAX_DECISION_POINTS = 3  # Decision points per example\n",
+                "ROLLOUT_K = 4  # Rollouts per (decision_point, chunk) pair\n",
+                "ROLLOUT_H = 64  # Tokens per rollout\n",
+                "\n",
+                "print(f\"\\nRollout-Light Config:\")\n",
+                "print(f\"  max_examples: {MAX_EXAMPLES}\")\n",
+                "print(f\"  max_decision_points: {MAX_DECISION_POINTS}\")\n",
+                "print(f\"  rollout_k: {ROLLOUT_K}\")\n",
+                "print(f\"  rollout_h: {ROLLOUT_H}\")\n",
+                "\n",
+                "# ============================================================\n",
+                "# RUN CONFIRM WITH ROLLOUT-LIGHT\n",
                 "# ============================================================\n",
                 "if prev_state and prev_state.get('status') == 'completed':\n",
-                "    print(f\"\u2713 Confirm run already completed at {prev_state.get('timestamp')}\")\n",
+                "    print(f\"\\n\u2713 Confirm run already completed at {prev_state.get('timestamp')}\")\n",
                 "    print(f\"  Results at: {prev_state.get('drive_path')}\")\n",
                 "    \n",
                 "    # Load and display metrics\n",
@@ -543,17 +568,21 @@
                 "                print(f\"{k}: {v}\")\n",
                 "        print(\"=\"*60)\n",
                 "else:\n",
-                "    print(\"Running confirm with max_examples=15 (excluding prior IDs)...\")\n",
+                "    print(f\"\\nRunning rollout-light confirm (max_examples={MAX_EXAMPLES})...\")\n",
                 "    print(\"Results sync to Drive after EVERY example for crash protection!\")\n",
-                "    print(\"This may take 20-30 minutes...\\n\")\n",
+                "    print(\"This may take 30-60 minutes depending on rollout settings...\\n\")\n",
                 "    \n",
-                "    # Build command with exclude list AND Drive sync\n",
+                "    # Build command with rollout-light method\n",
                 "    cmd = [\n",
                 "        \"python\", \"scripts/run_edgepatch.py\", \"confirm\",\n",
                 "        \"--output-dir\", str(LOCAL_OUTPUT),\n",
-                "        \"--max-examples\", \"15\",\n",
+                "        \"--max-examples\", str(MAX_EXAMPLES),\n",
                 "        \"--score-span\", \"extended\",\n",
-                "        \"--drive-sync-dir\", str(DRIVE_SYNC),  # INCREMENTAL SYNC!\n",
+                "        \"--method\", \"rollout_light\",  # NEW: Use rollout-light v2\n",
+                "        \"--max-decision-points\", str(MAX_DECISION_POINTS),\n",
+                "        \"--rollout-k\", str(ROLLOUT_K),\n",
+                "        \"--rollout-h\", str(ROLLOUT_H),\n",
+                "        \"--drive-sync-dir\", str(DRIVE_SYNC),  # Incremental sync\n",
                 "    ]\n",
                 "    \n",
                 "    # Add exclude IDs if we have any\n",
@@ -576,21 +605,33 @@
                 "            with open(metrics_path) as f:\n",
                 "                metrics = json.load(f)\n",
                 "            \n",
-                "            # Collect processed IDs for checkpoint (growing exclude list)\n",
-                "            processed_ids = list(prior_ids)  # Start with prior\n",
+                "            # Collect processed IDs for checkpoint\n",
+                "            processed_ids = list(prior_ids)\n",
                 "            if results_path.exists():\n",
                 "                with open(results_path) as f:\n",
-                "                    for ex in json.load(f):\n",
+                "                    results_data = json.load(f)\n",
+                "                    for ex in results_data:\n",
                 "                        if ex[\"example_id\"] not in prior_ids:\n",
                 "                            processed_ids.append(ex[\"example_id\"])\n",
+                "                    \n",
+                "                    # Check for rollout-light method details\n",
+                "                    if results_data and 'method_details' in results_data[0]:\n",
+                "                        details = results_data[0]['method_details']\n",
+                "                        print(\"\\n\" + \"=\"*60)\n",
+                "                        print(\"ROLLOUT-LIGHT METHOD DETAILS\")\n",
+                "                        print(\"=\"*60)\n",
+                "                        print(f\"Decision points found: {details['stats'].get('decision_points_found', 'N/A')}\")\n",
+                "                        print(f\"Chunks screened: {details['stats'].get('chunks_screened', 'N/A')}\")\n",
+                "                        print(f\"Rollout sets: {details['stats'].get('rollout_sets', 'N/A')}\")\n",
+                "                        print(\"=\"*60)\n",
                 "            \n",
-                "            # Save completion checkpoint with growing ID list\n",
+                "            # Save checkpoint\n",
                 "            ckpt.save({\n",
                 "                'status': 'completed',\n",
                 "                'local_path': str(run_dir),\n",
                 "                'drive_path': str(drive_path),\n",
                 "                'metrics': metrics,\n",
-                "                'processed_ids': processed_ids,  # For future runs\n",
+                "                'processed_ids': processed_ids,\n",
                 "            })\n",
                 "            \n",
                 "            print(\"\\n\" + \"=\"*60)\n",
@@ -603,18 +644,18 @@
                 "            print(f\"Shuffled \u03c1:     {metrics.get('shuffled_rho', 'N/A'):.4f}\")\n",
                 "            print(\"=\"*60)\n",
                 "            print(f\"\u2713 CONFIRM PASS - Processed {len(processed_ids) - len(prior_ids)} NEW examples\")\n",
-                "            print(f\"  Total processed (incl prior): {len(processed_ids)}\")\n",
+                "            print(f\"  Method: rollout_light\")\n",
                 "            print(f\"  Drive path: {drive_path}\")\n",
                 "            print(\"=\"*60)\n",
                 "        else:\n",
                 "            print(\"\\n\" + \"=\"*60)\n",
                 "            print(\"\u2717 CONFIRM FAIL - No eval_metrics.json\")\n",
-                "            print(\"  Check incremental results at: \" + str(DRIVE_SYNC / \"all_results_incremental.json\"))\n",
+                "            print(f\"  Check incremental results at: {DRIVE_SYNC / 'all_results_incremental.json'}\")\n",
                 "            print(\"=\"*60)\n",
                 "    else:\n",
                 "        print(\"\\n\" + \"=\"*60)\n",
                 "        print(\"\u2717 CONFIRM FAIL - No run directory\")\n",
-                "        print(\"  Check incremental results at: \" + str(DRIVE_SYNC / \"all_results_incremental.json\"))\n",
+                "        print(f\"  Check incremental results at: {DRIVE_SYNC / 'all_results_incremental.json'}\")\n",
                 "        print(\"=\"*60)"
             ]
         },
